Bug #48320
mon/mon-last-epoch-clean.sh fails
% Done:
0%
Source:
Tags:
Backport:
Regression:
Yes
Severity:
3 - minor
Reviewed:
Description
2020-11-22T04:22:08.738 INFO:tasks.workunit.client.0.smithi146.stderr://home/ubuntu/cephtest/clone.client.0/qa/standalone/mon/mon-last-epoch-clean.sh:134: get_fc_lc_diff: osdm_lc=88 2020-11-22T04:22:08.738 INFO:tasks.workunit.client.0.smithi146.stderr://home/ubuntu/cephtest/clone.client.0/qa/standalone/mon/mon-last-epoch-clean.sh:136: get_fc_lc_diff: echo 57 2020-11-22T04:22:08.738 INFO:tasks.workunit.client.0.smithi146.stderr:/home/ubuntu/cephtest/clone.client.0/qa/standalone/mon/mon-last-epoch-clean.sh:280: TEST_mon_last_clean_epoch: post_map_diff=57 2020-11-22T04:22:08.738 INFO:tasks.workunit.client.0.smithi146.stderr:/home/ubuntu/cephtest/clone.client.0/qa/standalone/mon/mon-last-epoch-clean.sh:282: TEST_mon_last_clean_epoch: [[ 57 -lt 57 ]] 2020-11-22T04:22:08.738 INFO:tasks.workunit.client.0.smithi146.stderr:/home/ubuntu/cephtest/clone.client.0/qa/standalone/mon/mon-last-epoch-clean.sh:282: TEST_mon_last_clean_epoch: exit 1 2020-11-22T04:22:08.739 DEBUG:teuthology.orchestra.run:got remote process result: 1
/kchai-2020-11-22_03:37:22-rados-wip-kefu-testing-2020-11-19-1104-distro-basic-smithi/5646193/
this is a regression introduced by f994925908c720f8e0b3fda2f1fc51ef6e757de3
History
#1 Updated by Kefu Chai about 2 months ago
- Status changed from New to Fix Under Review
- Pull request ID set to 38239
- Component(RADOS) Monitor added
#2 Updated by Kefu Chai about 2 months ago
- Status changed from Fix Under Review to Resolved