mon/OSDMonitor: drop osd_epoch of manually marked out osd

this change addresses the regression introduced by
d047e88cd0af9d7192235450c00ec5a738aa5a98.

in d047e88cd0af9d7192235450c00ec5a738aa5a98, instead of ignoring the
osd_epoch from non-in OSD, the osd_epochs from osds marked out using
CEPH_OSD_OUT in its osd_state are dropped once they are marked out.

but the change failed to take those OSDs which are marked out manually
into consideration. we mark them out by changing inc.new_weight to
CEPH_OSD_OUT. and mon-last-epoch-clean.sh marks osd.2 out manually for
testing osdmap trimming. hence we have the regression after that change.

in this change, the manually marked out OSDs are also considered, so
their osd_epochs are also dropped in OSDMonitor::update_from_paxos().

Fixes: https://tracker.ceph.com/issues/48320
Signed-off-by: Kefu Chai <kchai@redhat.com>